# pyqode.language_server

./: LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: publish-package.yaml
pyqode/language_server/: __init__.py
pyqode/language_server/backend/: __init__.py  server.py  workers.py
pyqode/language_server/modes/: __init__.py  calltips.py  diagnostics.py  language_server_mode.py  symbols.py
